brat/test/golden/kernel/classical_return.brat.golden
Error in test/golden/kernel/classical_return.brat@FC {start = Pos {line = 5, col = 6}, end = Pos {line = 5, col = 29}}:
f :: { Qubit -o Qubit, Int }
     ^^^^^^^^^^^^^^^^^^^^^^^

  Parse error unexpected { Qubit -o Qubit, Int }
expecting (...), Bit, Bool, Comment, Float, Horizontal space, Int, List, Nat, Option, Pair, String, Type, Unit, Vec, \n, identifier, name, or {...}


